...
              child: CircularProgressIndicator(
                strokeWidth: 2,
                color: context.palette.onPrimary,
              ),
            )
          : Text(
              '提交作答',
              style: TextStyle(
                fontSize: 14,
                color: context.palette.onPrimary,
                fontWeight: FontWeight.w600,
              ),
            ),
...
